# mechabellum_replay_parser

./: .gitignore  .justfile  LICENSE  README.md  mechabellum_replay_parser.py  pyproject.toml  requirements.txt  stats.py
data/: unit_data.json
scripts/: stats.py
src/mechabellum_replay_parser/: __init__.py  cli.py
src/mechabellum_replay_parser/data/: unit_data.json
tests/: test_unit_drops.py
