[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mechabellum-replay-parser"
version = "0.1.2"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "prettytable>=3.14.0",
]

[project.scripts]
mechabellum-replay-parser = "mechabellum_replay_parser.cli:main"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.sdist]
include = ["src/**", "tests/**"]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
]